<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10dp"
    android:background="@color/LavenderBlush">
    
    <Button
        android:id="@+id/btn_add_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dip"
        android:layout_marginTop="20dp"
        android:text="@string/add_user_info" />
    
    <TextView
        android:id="@+id/txt_sel_usr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txt_sel_usr" />
   	<Spinner
	    android:id="@+id/spnr_select_usr"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:padding="5dp" />
	   
   	<TextView
        android:id="@+id/txt_sel_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sel_brand" 
        android:layout_marginTop="30dp"/>
   	
  	 <Spinner
	    android:id="@+id/spnr_select_brand"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" 
	    android:padding="5dp"/>
    
    <Button android:id="@+id/btn_get_size" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/get_my_size"
        android:padding="12dip"
        android:layout_marginTop="30dp"/>

  
</LinearLayout>
</ScrollView>
