<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
    
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddUserInfoActivity" 
    android:padding="10dp"
    android:background="@color/LavenderBlush">
    
 <TextView
        android:id="@+id/txt_pg_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:padding="15dip"
        android:text="@string/txt_pg_info" />
 
 
 <TextView
        android:id="@+id/txt_usr_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
	    android:layout_below="@id/txt_pg_info"
        android:layout_marginTop="10dp"
        android:padding="20dip"
        android:text="@string/txt2" />
 
 <TextView
     android:id="@+id/txt_brand_name"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentRight="true"
     android:layout_alignTop="@+id/txt_usr_name"
     android:layout_below="@id/txt_pg_info"
     android:layout_marginTop="5dp"
     android:padding="15dip"
     android:text="@string/txt_brnd" />
 
 
 <TextView
        android:id="@+id/txt_sxn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
	    android:layout_below="@id/txt_usr_name"
        android:layout_marginTop="10dp"
        android:padding="20dip"
        android:text="@string/txt_sxn" />
 
 <TextView android:id="@+id/txt_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_size"
        android:padding="15dip"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="7dp"
      	android:layout_alignTop="@+id/txt_sxn"
	    android:layout_alignBaseline="@+id/txt_sxn"
	    android:layout_centerInParent="true"
	    android:layout_toRightOf="@id/txt_sxn" />
 
 <TextView
        android:id="@+id/txt_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
	    android:layout_below="@id/txt_sxn"
        android:layout_marginTop="10dp"
        android:padding="20dip"
        android:text="@string/txt_top" />
 
 <TextView android:id="@+id/txt_top_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_size"
        android:padding="15dip"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="7dp"
      	android:layout_alignTop="@+id/txt_top"
	    android:layout_alignBaseline="@+id/txt_top"
	    android:layout_centerInParent="true"
	    android:layout_toRightOf="@id/txt_top"
	    android:layout_alignLeft="@+id/txt_size" />
 
 <TextView
        android:id="@+id/txt_dress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
	    android:layout_below="@id/txt_top"
        android:layout_marginTop="10dp"
        android:padding="20dip"
        android:text="@string/txt_dress" />
 
  <TextView
      android:id="@+id/txt_dress_size"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBaseline="@+id/txt_dress"
      android:layout_alignTop="@+id/txt_dress"
      android:layout_alignLeft="@+id/txt_size"
      android:padding="15dip"
      android:text="@string/txt_size" />
 
  <TextView
        android:id="@+id/txt_bottoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
	    android:layout_below="@id/txt_dress"
        android:layout_marginTop="10dp"
        android:padding="20dip"
        android:text="@string/txt_bottom" />
  
   <TextView
      android:id="@+id/txt_bottom_size"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBaseline="@+id/txt_bottoms"
      android:layout_alignTop="@+id/txt_bottoms"
      android:layout_alignLeft="@+id/txt_size"
      android:padding="15dip"
      android:text="@string/txt_size" />

 

</RelativeLayout>
</ScrollView>
